# embedlib

./: AUTHORS  CMakeLists.txt  README.md
include/: heap_string.h  stack_string.h  string_wrapper.h
src/: heap_string.cpp  string_wrapper.cpp
test/: heap_string_test.cpp  main.cpp  stack_string_test.cpp  string_wrapper_test.cpp
